--- a/src/app/properties/bikes/bikes.component.html
+++ b/src/app/properties/bikes/bikes.component.html
@@ -9,41 +9,23 @@
   </div>
 </div>
 <div class="col-sm-12 line">
-  <img src="./assets/images/bikes/bikes.png" class="col-sm-2">
+  <img src="{{category.image}}" class="col-sm-2">
   <span class="col-sm-10">
-    <p class="size">Bikes</p>
-    1,78,016 Ads
+    <p class="size">{{category.name}}</p>
+   {{category.ads}}
     <br>
     <a routerLink=''>View all Ads >></a>
   </span>
 </div>
 <div class="col-sm-12" style="padding-top: 30px">
-  <div class="col-sm-2 box text-center">
+  <div class="col-sm-2 box text-center" *ngFor="let list of products">
 
-
-    <a routerLink=''>
-      <img src="./assets/images/bikes/motor.png">
-      <br> Motorcycles</a>
-  </div>
-  <div class="col-sm-2 box text-center">
-
-    <a routerLink=''>
-      <img src="./assets/images/bikes/scooter.png">
-      <br>Scooters</a>
-  </div>
-  <div class="col-sm-2 box text-center">
-
-    <a routerLink=''>
-      <img src="./assets/images/bikes/bicycle.png">
-      <br>Bicycles</a>
-  </div>
-  <div class="col-sm-2 box text-center">
-
-    <a routerLink=''>
-      <img src="./assets/images/bikes/parts.png">
-      <br>Spare Parts</a>
+    <a routerLink='/'>
+      <img src="{{list.image}}">
+      <br> {{list.name}}</a>
   </div>
 
+    
 </div>
 <!-- <div class="container">
     <div class="row">
