--- a/src/app/properties/bikes/bikes.component.html
+++ b/src/app/properties/bikes/bikes.component.html
@@ -9,16 +9,16 @@
   </div>
 </div>
 <div class="col-sm-12 line">
-  <img src="{{category.image}}" class="col-sm-2">
+  <img src="{{bikes.category.image}}" class="col-sm-2">
   <span class="col-sm-10">
-    <p class="size">{{category.name}}</p>
-   {{category.ads}}
+    <p class="size">{{bikes.category.name}}</p>
+   {{bikes.category.ads}}
     <br>
     <a routerLink=''>View all Ads >></a>
   </span>
 </div>
 <div class="col-sm-12" style="padding-top: 30px">
-  <div class="col-sm-2 box text-center" *ngFor="let list of products">
+  <div class="col-sm-2 box text-center" *ngFor="let list of bikes.products">
 
     <a routerLink='/'>
       <img src="{{list.image}}">
