--- a/src/app/properties/product-details/product-details.component.html
+++ b/src/app/properties/product-details/product-details.component.html
@@ -48,9 +48,11 @@
         <br>
         <p class="add-model">{{ index.model}}</p>
         <b class="add-address">{{ index.address }}</b>
-
       </div>
+      <!-- <button class="button btn-primary" click="addCart()">AddCart</button> -->
+
       <div class="col-xs-2 add-price text-right">
+        
         <b> {{ index.price }}</b>
       </div>
     </div>
