generating admin guard

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
                 <li class="upper-links" ><a class="links" routerLink='/home'>Home</a></li>
                 <li class="upper-links" *ngIf='!_authService.logedIn()'><a class="links" routerLink='/login'>Login</a></li>
                 <li class="upper-links" *ngIf='!_authService.logedIn()'><a class="links" routerLink='/register'>Sign Up</a></li>
+                <li class="upper-links" *ngIf="_authService.logedIn() && role=='admin'"><a class="links" routerLink=''>Admin</a></li>
                 <li  class="upper-links" *ngIf='_authService.logedIn()'><a (click)='_authService.logedOutUser()' class="links"
                     routerLinkActive ="active">Log Out</a></li>
                 <li class="upper-links"><a class="links" routerLink='#'>Other</a></li>
@@ -64,6 +65,7 @@
     <a routerLink='/home'>Home</a>
     <a  *ngIf='!_authService.logedIn()' routerLink='/login'>Login</a>
     <a  *ngIf='!_authService.logedIn()' routerLink='/register'>Sign Up</a>
+    <!-- <a  *ngIf='_authService.logedIn() && role=='admin'' routerLink=''>Admin</a> -->
     <a  *ngIf='_authService.logedIn()' (click)='_authService.logedOutUser()'>Log Out</a>
     <a routerLink='/categories/properties'>Properties</a>
 </div>
