--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -16,15 +16,15 @@
     <form #regForm='ngForm' class="separator">
       <div class="form-group input-group col-xs-12">
         <div class="col-xs-6 padding-remove fname">
-          <input type="text" [(ngModel)]="userdata.Fname" name="Fname" class="form-control border " placeholder="FIRST NAME"  #Fname="ngModel" minlength="3" required>
-          <div [hidden]="(Fname.dirty || Fname.untouched)" class="error-msg">Firstname is required </div>
-            <div *ngIf=userdata.Fname [hidden]="Fname.valid || Fname.untouched" class="error">Please enter a valid name</div>
+          <input type="text" [(ngModel)]="userdata.firstName" name="firstName" class="form-control border " placeholder="FIRST NAME"  #firstName="ngModel" minlength="3" required>
+          <div [hidden]="(firstName.dirty || firstName.untouched)" class="error-msg">Firstname is required </div>
+            <div *ngIf=userdata.firstName [hidden]="firstName.valid || firstName.untouched" class="error">Please enter a valid name</div>
          
         </div>
        
         <div class="col-xs-6 padding-remove2 lname">
-          <input type="text" [(ngModel)]="userdata.Lname" name="Lname" class="form-control border" placeholder="LAST NAME"  #Lname="ngModel" minlength="3" required> 
-          <div [hidden]="(Lname.dirty || Lname.untouched )" class="error-msg">Lastname is required
+          <input type="text" [(ngModel)]="userdata.lastName" name="lastName" class="form-control border" placeholder="LAST NAME"  #lastName="ngModel" minlength="3" required> 
+          <div [hidden]="(lastName.dirty || lastName.untouched )" class="error-msg">Lastname is required
           </div>
         </div>
        
