--- a/src/app/properties/product-details/product-details.component.html
+++ b/src/app/properties/product-details/product-details.component.html
@@ -41,7 +41,7 @@
     <h4 class="text-left">Featured Ads</h4>
     <div class="col-xs-12  add-border" *ngFor="let index of productinfo.sub">
       <div class="col-xs-2">
-        <img src="{{ index.images }}" alt="No image" class="img-fluid">
+        <img src="{{ index.image }}" alt="No image" width="52px" height="52px;" class="img-fluid">
       </div>
       <div class="col-xs-8 add-title">
         {{index.name}}
@@ -49,11 +49,9 @@
         <p class="add-model">{{ index.model}}</p>
         <b class="add-address">{{ index.address }}</b>
       </div>
-      <!-- <button class="button btn-primary" click="addCart()">AddCart</button> -->
-
+      <button class="button btn-primary"  (click)="addCart(index.name)">AddCart</button>
       <div class="col-xs-2 add-price text-right">
-        
-        <b> {{ index.price }}</b>
+         <b> {{ index.price }}</b>
       </div>
     </div>
   </div>
