directives are generated

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                 </li>
                 <li class="upper-links dropdown"><a class="links" href='#'>Dropdown</a>
                     <ul class="dropdown-menu">
-                        <li class="profile-li"><a class="profile-links" href="#">Link</a></li>
+                        <li class="profile-li"><a class="profile-links" routerLink='/sample'>Sample</a></li>
                         <li class="profile-li"><a class="profile-links" href="#">Link</a></li>
                         <li class="profile-li"><a class="profile-links" href="#">Link</a></li>
                         <li class="profile-li"><a class="profile-links" href="#">Link</a></li>
