generating custom directive

--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -55,3 +55,7 @@
       [style.color]="getColor(person.country)">{{ person.name }} ({{ person.country }})
   </li>
 </ul>
+<!-- custom directive example -->
+<div style="text-align:center" custom>
+  <h1 changeText >Welcome to {{title}}.</h1>
+</div>
