generating custom pipe

--- a/src/app/sample/sample.component.html
+++ b/src/app/sample/sample.component.html
@@ -135,3 +135,10 @@
     </ul>
   </div>
 </div>
+<!-- custompipe -->
+<div class="card card-block">
+  <h1 class="card-title">custompipe</h1>
+  <div class="card-text">
+    <p>{{ 'hello World' | custom }}</p>
+  </div>
+</div>
